V1.0.2rc7 Thursday, January 10 2013 
 Changes
 +Added patch 3389976 - history menu crash, utf-8
 +Added UTF-8 checks on incomming text streams.
 +Changed history entries to structures (and history file format) to support
  upcoming features.
 +Added persistent history list and corresponding hot key.
 +Added Save As for the history file - writes a text file out.
 +Major rewrite of cliboard handling. It is now very simple and eliminates a lot of CPU.
 +Fixed bug 3560995, mouse button events causing false searches.
 
V1.0.2rc6 Wednesday, January 9 2013 
 Changes
 +Applied glib patch from bug 3518845
 +Applied 0 size Action file lockup from bug 3459123
 +Fixed arrow/home/page up keys messing up search-as-you-type.
 +Fixed having multiple copies of parcellite. Checks to see if already running.
 +Fixed double backspace on search-as-you-type.
 +Fixed command line copies to clipboard. Should work on all X sessions. Note: entry is not 
  immediately added to clipboard. There is a 1/2 sec delay.
 
V1.0.2rc5  Friday, September 9 2011 
 Changes
 +Fixed the primary deselect and file cut/paste issue.
 
v1.0.2rc4  Monday, September 5 2011
 Changes
 +Fix bugs introduced in clipboard code selection. Should fix primary deselect and file cut/paste issue.
 +Applied FSF Address change patch from Andrew Starr-Bochicchio, Debian.
 +Changed history limit to 1000.
 +Applied build patch on new Debian boxes Andrew Starr-Bochicchio, Debian.

v1.0.2rc3	 Sunday, August 7 2011
 Changes
 +Fixed xdg compliance, based on patch by Victor Ananjevsky.
 +Fixed Status Icon missing on execute Action.
 +Fixed Capture Hyperlinks only
 +Added Ignore Whitespace only
 +Added Trim Whitespace
 +Added Trim Newlines
 +Fixed Actions having HTML markup in the clipboard entry.
 +Fixed goption warning.
 +Updated Russian (Alexander Kazancev).
 +Updated Catalan translation, position type. (Fuertes::Benjami)
 +cleaned up clipboard handling stuff, which broke primary selection.
 
v1.0.2rc2	 Tuesday, April 05 2011