@@ -1,6 +1,6 @@
 AM_CFLAGS = -I$(top_srcdir) -DPARCELLITELOCALEDIR=\""$(parcellitelocaledir)"\"
-INCLUDES = $(GTK_CFLAGS)
-LDADD = $(GTK_LIBS) -lX11 -lgdk-x11-2.0 -lpango-1.0 -lgobject-2.0 -lglib-2.0
+INCLUDES = $(GTK_CFLAGS) $(APPINDICATOR_CFLAGS)
+LDADD = $(GTK_LIBS) $(APPINDICATOR_LIBS) -lX11 -lgdk-x11-2.0 -lpango-1.0 -lgobject-2.0 -lglib-2.0
 
 bin_PROGRAMS = parcellite
 
